--- a/LoginPage/css/main.css
+++ b/LoginPage/css/main.css
@@ -226,7 +226,18 @@ iframe {
   background: rgba(0,0,0,0.3);
 }
 
-
+/*Spans for left side*/
+.mission-header{
+  text-decoration: underline;
+  font-family: Gill Sans, sans-serif;
+  text-align:center;
+  font-size:24px;
+}
+.mission-statement{
+  font-family: Gill Sans, sans-serif;
+  text-align:center;
+  font-size:16px;
+}
 
 /*==================================================================
 [ Form ]*/
