--- a/algorithm page/style.css
+++ b/algorithm page/style.css
@@ -1,10 +1,21 @@
+body{
+	background-color: #f2f2f2;
+}
+
+body .main-page{
+		background-color: #fff;
+		
+}
+
 .row{
 	margin-left: 0;
 	margin-right: 0;
+	padding-left: 0px;
 }
 
 input, label, textarea{
-	width: 100%;
+	/*width: 100%*/
+
 }
 
 
@@ -13,7 +24,7 @@ label{
 	font-weight: normal;
 }
 
-form input, form textarea, form select{
+form input, /*form textarea,*/ form select{
 	border-radius: 2px;
 	border: 1px solid #83838380;
 	height: 35px;
@@ -113,4 +124,64 @@ form .row{
 		max-height: 175px !important;
 	}
 
+.main{
+  width: 600px;
+  height: 500px;
+}
+
+
+}
+
+.wrapper {
+    display: flex;
+    width: 100%;
+}
+
+#sidebar {
+    width: 250px;
+    position: fixed;
+		text-align: center;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    z-index: 999;
+    background: #7386D5;
+    color: #fff;
+    transition: all 0.3s;
+
+}
+
+.whitetext{
+	color: #fff;
+
+}
+
+/*
+a, a:hover, a:focus {
+    color: inherit;
+    text-decoration: none;
+    transition: all 0.3s;
+}
+*/
+
+.centervertical{
+	position:relative;
+	top: 50%;
+}
+
+li{
+	height: 50px;
+	padding-top: 15px;
+}
+
+li:hover{
+	color:red;
+	background-color: rgba(0,0,0,.25);
+
+	height: 50px;
+}
+
+a:hover{
+	color: red;
+	decoration: none;
 }
