--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -165,13 +165,6 @@ form .row{
 
 
 
-/*
-a, a:hover, a:focus {
-    color: inherit;
-    text-decoration: none;
-    transition: all 0.3s;
-}
-*/
 
 .centervertical{
 	position:relative;
@@ -190,8 +183,24 @@ li:hover{
 	height: 50px;
 }
 
-a:hover{
-	color: darkblue;
-	decoration: none;
 
+a{
+	color: black;
+}
+
+a:hover{
+	color:black;
+	decoration: none;
+}
+
+
+
+.textboxquestion{
+	font-size: 5;
+	position:relative;
+	top:-5px;
+}
+
+.centerhorizontal{
+	margin-left: 30%;
 }
