--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -231,12 +231,14 @@ iframe {
   font-size:36px;
   display:inline-block;
   padding-bottom:30px;
+  text-shadow: 2px 2px black;
 
 }
 .mission-statement{
   font-family: Arial, Arial;
   font-size:16px;
   display:inline-block;
+  text-shadow: 2px 2px black;
 
 }
 
