--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -204,3 +204,32 @@ a:hover{
 .centerhorizontal{
 	margin-left: 30%;
 }
+
+.centerhorizontal2{
+	margin-left: 40%;
+}
+
+.backgroundgrey{
+	background-color: lightgrey;
+}
+
+.backgroundgreen{
+	background-color: lightgreen;
+}
+
+.backgroundblue{
+	background-color: lightblue;
+}
+
+.backgroundred{
+	background-color: pink;
+}
+
+.quarterlength{
+	width: 25%;
+}
+
+.inputcheck{
+	length: 250px;
+	height: 25px;
+}
