--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -38,7 +38,7 @@ form [type=checkbox]{
 
 button{
 	border-radius: 4px;
-	background: #00529b;
+	background: green;
 	color: white;
 	padding: 10px;
 	font-size: 15px;
