backgroundgreen backgroundgrey color change

--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -210,11 +210,11 @@ margin-left:40%;
 }
 
 .backgroundgrey{
-	background-color: lightgrey;
+	background-color: #808080;
 }
 
 .backgroundgreen{
-	background-color: lightgreen;
+	background-color: green;
 }
 
 .backgroundblue{
