--- a/client/views/viewprofile.ejs
+++ b/client/views/viewprofile.ejs
@@ -37,6 +37,30 @@
     margin-right: 2.35765%;
     width: 100%;
 	}
+	.rating {
+		color: #a9a9a9;
+		margin: 0;
+		padding: 0;
+	}
+	ul.rating {
+		display: inline-block;
+	}
+	.rating li {
+		list-style-type: none;
+		display: inline-block;
+		padding: 1px;
+		text-align: center;
+		font-weight: bold;
+		cursor: pointer;
+		font-size:20px;
+	}
+	.rating .filled{
+		color: orangered;
+	}
+	.rating li:hover{
+		color: #f9a602;
+		background: none;
+	}
   </style>
 </head>
  <body ng-app="directoryApp">
@@ -45,12 +69,20 @@
       <a href="/dashboard" class="home active">Home Page</a>
       <a href= "/profile"> Profile </a>
       <a href= "/matches"> Find Mentors </a>
-      <a href= "menteerequests.html"> Mentee Requests </a>
-      <a href= "matchlist.html"> Current Matches </a>
+      <a href= "/mentees"> Mentee Requests </a>
+      <a href= "/matches"> Current Matches </a>
       <a href= "/logout"> Log Out </a>
     </div>
         <div class="container main-page">
-	<h1 class="span-12 omega"><%= username%>'s Profile</h1>
+	<h1 class="span-12 omega" style="text-transform:capitalize"><%= username%>'s Profile</h1>
+	<div>
+		<h4>Rate your experience with <span style="text-transform:capitalize"><%= username%></span></h4>
+            <div ng-repeat="rating in ratings">
+            <div star-rating rating-value="" max="rating.max" on-rating-selected="getSelectedRating(rating, userProfile.username,'<%= username%>')"></div>
+        </div>
+		<hr>
+	</div>
+
 <div class="clear" style="margin-bottom: 15px">
 		
 <div class="span-4" style="text-align:left !important">
@@ -78,7 +110,6 @@
 	
 	
 </div>
-
 </div>
 <div class="clear">
 <hr>
