--- a/client/views/viewprofile.ejs
+++ b/client/views/viewprofile.ejs
@@ -93,7 +93,7 @@
 <div class="span-4">
 	<h4>Personal Information</h4>
 	<p><span class="bold">Age: </span><%= age%></p>
-	<p><span class="bold">Ethnicty: </span><%= ethnicty%></p>
+	<p><span class="bold">Ethnicty: </span><%= ethnicity%></p>
 	<p><span class="bold">Gender: </span><%= gender%></p>
 	<p ng-if="'<%= matchStat%>' == 'accepted'"><span class="bold">Email: </span><%= email%></p>
 </div>
