--- a/client/views/viewprofile.ejs
+++ b/client/views/viewprofile.ejs
@@ -61,6 +61,11 @@
 		color: #f9a602;
 		background: none;
 	}
+	@media only screen and (max-width: 768px)
+.span-4 {
+    width: 100% !important;
+    clear: both;
+}
   </style>
 </head>
  <body ng-app="directoryApp">
